--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -17,10 +17,22 @@
     <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" Version="0.0.0.1-dev" />
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml" Version="0.0.0.1-dev" />
     <PackageVersion Include="Mutagen.Bethesda.Skyrim" Version="0.41.1.1-dev" />
+    <PackageVersion Include="Noggog.Autofac">
+      <Version>2.57.0.1-dev</Version>
+    </PackageVersion>
     <PackageVersion Include="Noggog.CSharpExt">
       <Version>2.57.0.1-dev</Version>
     </PackageVersion>
+    <PackageVersion Include="Noggog.CSharpExt.Windows">
+      <Version>2.57.0.1-dev</Version>
+    </PackageVersion>
     <PackageVersion Include="Noggog.Testing">
+      <Version>2.57.0.1-dev</Version>
+    </PackageVersion>
+    <PackageVersion Include="Noggog.WPF">
+      <Version>2.57.0.1-dev</Version>
+    </PackageVersion>
+    <PackageVersion Include="Noggog.SourceGenerators">
       <Version>2.57.0.1-dev</Version>
     </PackageVersion>
     <PackageVersion Include="NuGet.Build.Tasks">
@@ -43,6 +55,11 @@
     <PackageVersion Include="NuGet.Versioning">
       <Version>6.5.0</Version>
     </PackageVersion>
+    <PackageVersion Include="Serilog" Version="2.12.0" />
+    <PackageVersion Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="3.1.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageVersion Include="StrongInject">
       <Version>1.4.4</Version>
     </PackageVersion>
