--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -24,22 +24,22 @@
       <Version>0.41.1.1-CI-20230616-234637</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Autofac">
-      <Version>2.58.0.1-CI-20230617-055601</Version>
+      <Version>[2.58.0.1-CI-20230619-041947]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.CSharpExt">
-      <Version>2.58.0.1-CI-20230617-055601</Version>
+      <Version>[2.58.0.1-CI-20230619-041947]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.CSharpExt.Windows">
-      <Version>2.58.0.1-CI-20230617-055601</Version>
+      <Version>[2.58.0.1-CI-20230619-041947]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Testing">
-      <Version>2.58.0.1-CI-20230617-055601</Version>
+      <Version>[2.58.0.1-CI-20230619-041947]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.WPF">
-      <Version>2.58.0.1-CI-20230617-055601</Version>
+      <Version>[2.58.0.1-CI-20230619-041947]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.SourceGenerators">
-      <Version>2.58.0.1-CI-20230617-055601</Version>
+      <Version>[2.58.0.1-CI-20230619-041947]</Version>
     </PackageVersion>
     <PackageVersion Include="NuGet.Build.Tasks">
       <Version>6.5.0</Version>
