--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,17 +11,17 @@
     </PackageVersion>
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageVersion Include="Mutagen.Bethesda" >
-      <Version>0.41.1.1-CI-20230616-234637</Version>
+      <Version>[0.41.1.1-CI-20230616-234637]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Core">
-      <Version>0.41.1.1-CI-20230616-234637</Version>
+      <Version>[0.41.1.1-CI-20230616-234637]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization" Version="0.0.0.1-dev" />
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft" Version="0.0.0.1-dev" />
     <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" Version="0.0.0.1-dev" />
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml" Version="0.0.0.1-dev" />
     <PackageVersion Include="Mutagen.Bethesda.Skyrim">
-      <Version>0.41.1.1-CI-20230616-234637</Version>
+      <Version>[0.41.1.1-CI-20230616-234637]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Autofac">
       <Version>[2.58.0.1-CI-20230619-041947]</Version>
