Engine caching and cancellation  work

--- a/Spriggit.Engine/Spriggit.Engine.csproj
+++ b/Spriggit.Engine/Spriggit.Engine.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="NuGet.PackageManagement" />
     <PackageReference Include="NuGet.Protocol" />
     <PackageReference Include="Mutagen.Bethesda.Serialization" />
+    <PackageReference Include="Serilog" />
   </ItemGroup>
 </Project>
