--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,10 +19,18 @@
     <PackageVersion Include="Mutagen.Bethesda.Kernel">
       <Version>[0.41.1.1-nightly-20230722-102612]</Version>
     </PackageVersion>
-    <PackageVersion Include="Mutagen.Bethesda.Serialization" Version="0.0.0.1-zdev" />
-    <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft" Version="0.0.0.1-zdev" />
-    <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" Version="0.0.0.1-zdev" />
-    <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml" Version="0.0.0.1-zdev" />
+    <PackageVersion Include="Mutagen.Bethesda.Serialization" >
+      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+    </PackageVersion>
+    <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft" >
+      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+    </PackageVersion>
+    <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" Version="[nightly-20230728-041434]" >
+      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+    </PackageVersion>
+    <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml" >
+      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+    </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Skyrim">
       <Version>[0.41.1.1-nightly-20230722-102612]</Version>
     </PackageVersion>
