--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   build-test:
-    runs-on: window-latest
+    runs-on: windows-latest
           
     steps:
     - uses: actions/checkout@v2
