Tests not being picked up by CI

--- a/Spriggit.Tests/Spriggit.Tests.csproj
+++ b/Spriggit.Tests/Spriggit.Tests.csproj
@@ -5,6 +5,8 @@
         <PackageReference Include="Mutagen.Bethesda.Testing" />
         <PackageReference Include="Noggog.Testing" />
         <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.runner.console" />
+        <PackageReference Include="xunit.runner.visualstudio" />
     </ItemGroup>
     
     <ItemGroup>
