--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   activity-short-circuit:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     outputs:
       same_sha: ${{ steps.check.outputs.same_sha }}
     steps:
