Oblivion packages defined

--- a/Translation Packages/Spriggit.Json.Skyrim/Spriggit.Json.Skyrim.csproj
+++ b/Translation Packages/Spriggit.Json.Skyrim/Spriggit.Json.Skyrim.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Spriggit.Core\Spriggit.Core.csproj" />
+      <ProjectReference Include="..\..\Spriggit.Core\Spriggit.Core.csproj" />
     </ItemGroup>
 
 </Project>
