--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,31 +11,37 @@
     </PackageVersion>
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageVersion Include="Mutagen.Bethesda">
-      <Version>[0.41.1.1-nightly-20230722-102612]</Version>
+      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Core">
-      <Version>[0.41.1.1-nightly-20230722-102612]</Version>
+      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Kernel">
-      <Version>[0.41.1.1-nightly-20230722-102612]</Version>
+      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization" >
-      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+      <Version>[0.0.0.1-zdev]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft" >
-      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+      <Version>[0.0.0.1-zdev]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" Version="[nightly-20230728-041434]" >
-      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+      <Version>[0.0.0.1-zdev]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml" >
-      <Version>[0.0.0.1-nightly-20230728-041434]</Version>
+      <Version>[0.0.0.1-zdev]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Skyrim">
-      <Version>[0.41.1.1-nightly-20230722-102612]</Version>
+      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+    </PackageVersion>
+    <PackageVersion Include="Mutagen.Bethesda.Oblivion">
+      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+    </PackageVersion>
+    <PackageVersion Include="Mutagen.Bethesda.Fallout4">
+      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Testing">
-      <Version>[0.41.1.1-nightly-20230722-102612]</Version>
+      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Autofac">
       <Version>[2.59.0.1-nightly-20230716-054653]</Version>
