--- a/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
+++ b/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
@@ -1,33 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <RootNamespace>Spriggit.Serialization.Skyrim.Yaml</RootNamespace>
+        <RootNamespace>Spriggit.Serialization.Oblivion.Json</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IsPackable>true</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Mutagen.Bethesda.Serialization" />
-        <PackageReference Include="Mutagen.Bethesda.Serialization.Yaml" />
+        <PackageReference Include="Mutagen.Bethesda.Serialization.Newtonsoft" />
         <PackageReference Include="Mutagen.Bethesda.Serialization.SourceGenerator" />
-        <PackageReference Include="Mutagen.Bethesda.Skyrim" />
+        <PackageReference Include="Mutagen.Bethesda.Oblivion" />
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Customization.cs">
-        <CodeLanguage>cs</CodeLanguage>
-        <DefaultPackFolder>content</DefaultPackFolder>
-        <BuildAction>Compile</BuildAction>
-      </Compile>
+        <ProjectReference Include="..\..\Spriggit.Core\Spriggit.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Compile Update="EntryPoint.cs">
         <CodeLanguage>cs</CodeLanguage>
         <DefaultPackFolder>content</DefaultPackFolder>
         <BuildAction>Compile</BuildAction>
       </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Spriggit.Core\Spriggit.Core.csproj" />
     </ItemGroup>
 
 </Project>
