--- a/Spriggit.UI/Spriggit.UI.csproj
+++ b/Spriggit.UI/Spriggit.UI.csproj
@@ -140,6 +140,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Spriggit.CLI\Spriggit.CLI.csproj" />
       <ProjectReference Include="..\Spriggit.Engine\Spriggit.Engine.csproj" />
     </ItemGroup>
 
