--- a/Spriggit.CLI/Spriggit.CLI.csproj
+++ b/Spriggit.CLI/Spriggit.CLI.csproj
@@ -7,6 +7,7 @@
         <PackageReference Include="Noggog.CSharpExt" />
         <PackageReference Include="CommandLineParser" />
         <PackageReference Include="StrongInject" />
+        <PackageReference Include="Serilog.Sinks.Console" />
     </ItemGroup>
 
     <ItemGroup>
