Fixed translation package namespaces

--- a/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
+++ b/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
@@ -4,6 +4,7 @@
         <RootNamespace>Spriggit.Serialization.Oblivion.Json</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IsPackable>true</IsPackable>
+        <RootNamespace>Spriggit.Json.Oblivion</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
