--- a/Translation Packages/Spriggit.Json.Skyrim/Spriggit.Json.Skyrim.csproj
+++ b/Translation Packages/Spriggit.Json.Skyrim/Spriggit.Json.Skyrim.csproj
@@ -4,6 +4,7 @@
       <RootNamespace>Spriggit.Serialization.Skyrim.Json</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IsPackable>true</IsPackable>
+        <RootNamespace>Spriggit.Json.Skyrim</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
