--- a/Translation Packages/Spriggit.Yaml.Skyrim/Spriggit.Yaml.Skyrim.csproj
+++ b/Translation Packages/Spriggit.Yaml.Skyrim/Spriggit.Yaml.Skyrim.csproj
@@ -1,33 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <RootNamespace>Spriggit.Serialization.Skyrim.Yaml</RootNamespace>
+        <RootNamespace>Spriggit.Serialization.Skyrim.Yaml</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IsPackable>true</IsPackable>
+        <RootNamespace>Spriggit.Yaml.Skyrim</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Mutagen.Bethesda.Serialization" />
-        <PackageReference Include="Mutagen.Bethesda.Serialization.Yaml" />
-        <PackageReference Include="Mutagen.Bethesda.Serialization.SourceGenerator" />
-        <PackageReference Include="Mutagen.Bethesda.Skyrim" />
+        <PackageReference Include="Mutagen.Bethesda.Serialization"/>
+        <PackageReference Include="Mutagen.Bethesda.Serialization.Yaml"/>
+        <PackageReference Include="Mutagen.Bethesda.Serialization.SourceGenerator"/>
+        <PackageReference Include="Mutagen.Bethesda.Skyrim"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Customization.cs">
-        <CodeLanguage>cs</CodeLanguage>
-        <DefaultPackFolder>content</DefaultPackFolder>
-        <BuildAction>Compile</BuildAction>
-      </Compile>
-      <Compile Update="EntryPoint.cs">
-        <CodeLanguage>cs</CodeLanguage>
-        <DefaultPackFolder>content</DefaultPackFolder>
-        <BuildAction>Compile</BuildAction>
-      </Compile>
+        <Compile Update="Customization.cs">
+            <CodeLanguage>cs</CodeLanguage>
+            <DefaultPackFolder>content</DefaultPackFolder>
+            <BuildAction>Compile</BuildAction>
+        </Compile>
+        <Compile Update="EntryPoint.cs">
+            <CodeLanguage>cs</CodeLanguage>
+            <DefaultPackFolder>content</DefaultPackFolder>
+            <BuildAction>Compile</BuildAction>
+        </Compile>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Spriggit.Core\Spriggit.Core.csproj" />
+        <ProjectReference Include="..\..\Spriggit.Core\Spriggit.Core.csproj"/>
     </ItemGroup>
 
 </Project>
