--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,55 +11,55 @@
     </PackageVersion>
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageVersion Include="Mutagen.Bethesda">
-      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+      <Version>[0.42]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Core">
-      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+      <Version>[0.42]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Kernel">
-      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+      <Version>[0.42]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization" >
-      <Version>[0.0.0.1-nightly-20230811-044393]</Version>
+      <Version>[1.0.0]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft" >
-      <Version>[0.0.0.1-nightly-20230811-044393]</Version>
+      <Version>[1.0.0]</Version>
     </PackageVersion>
-    <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" Version="[nightly-20230728-041434]" >
-      <Version>[0.0.0.1-nightly-20230811-044393]</Version>
+    <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" >
+      <Version>[1.0.0]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml" >
-      <Version>[0.0.0.1-nightly-20230811-044393]</Version>
+      <Version>[1.0.0]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Skyrim">
-      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+      <Version>[0.42]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Oblivion">
-      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+      <Version>[0.42]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Fallout4">
-      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+      <Version>[0.42]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Testing">
-      <Version>[0.41.1.1-nightly-20230730-191771]</Version>
+      <Version>[0.42]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Autofac">
-      <Version>[2.59.0.1-nightly-20230811-032099]</Version>
+      <Version>[2.60]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.CSharpExt">
-      <Version>[2.59.0.1-nightly-20230811-032099]</Version>
+      <Version>[2.60]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.CSharpExt.Windows">
-      <Version>[2.59.0.1-nightly-20230811-032099]</Version>
+      <Version>[2.60]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Testing">
-      <Version>[2.59.0.1-nightly-20230811-032099]</Version>
+      <Version>[2.60]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.WPF">
-      <Version>[2.59.0.1-nightly-20230811-032099]</Version>
+      <Version>[2.60]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.SourceGenerators">
-      <Version>[2.59.0.1-nightly-20230811-032099]</Version>
+      <Version>[2.60]</Version>
     </PackageVersion>
     <PackageVersion Include="NuGet.Build.Tasks">
       <Version>6.5.0</Version>
