Spriggit.Linux sln

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -26,6 +26,16 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        sln:
+          - Spriggit.sln
+          - Spriggit.Linux.sln
+        exclude:
+          - os: ubuntu-latest
+            sln: Spriggit.sln
+          - os: macos-latest
+            sln: Spriggit.sln
+          - os: windows-latest
+            sln: Spriggit.Linux.sln
           
     steps:
     - uses: actions/checkout@v2
