--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -41,9 +41,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        dotnet clean Spriggit.sln -c Release && dotnet nuget locals all --clear
-        dotnet restore Spriggit.sln
+        dotnet clean ${{ matrix.sln }} -c Release && dotnet nuget locals all --clear
+        dotnet restore ${{ matrix.sln }}
     - name: Build
-      run: dotnet build Spriggit.sln -c Release --no-restore /p:GeneratePackageOnBuild=false
+      run: dotnet build ${{ matrix.sln }} -c Release --no-restore /p:GeneratePackageOnBuild=false
     - name: Test
-      run: dotnet test Spriggit.sln -c Release --no-build
+      run: dotnet test ${{ matrix.sln }} -c Release --no-build
