--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -99,6 +99,16 @@ jobs:
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: | 
         dotnet pack Spriggit.sln -c Release -o out
+    - name: Publish to Github
+      uses: svenstaro/upload-release-action@v2
+      if: ${{ success() && github.event.inputs.is_release_event == 'true' && github.ref == 'refs/heads/release' }}
+      with:
+        file: "**/*.nupkg"
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ github.event.release.tag_name }}
+        file_glob: "true"
+    - name: Publish to Nuget.org
+      run: dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --no-symbols
   
   update-nightly:
     needs: [build-test-push, activity-short-circuit]
