--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -100,11 +100,14 @@ jobs:
       run: | 
         dotnet pack Spriggit.sln -c Release -o out
     - name: Pack GUI
+      if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: dotnet publish "Spriggit.UI/Spriggit.UI.csproj" --configuration Release -p:PublishSingleFile=true -p:EnableCompressionInSingleFile=true
     - name: Archive Release
+      if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: |
         powershell Compress-Archive Spriggit.UI/bin/Release/net7.0-windows/publish/* Spriggit.zip
     - name: Publish GUI to Github
+      if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       uses: svenstaro/upload-release-action@v2
       with:
         file: Spriggit.zip
