--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -104,15 +104,15 @@ jobs:
       run: dotnet publish "Spriggit.UI/Spriggit.UI.csproj" --configuration Release -p:PublishSingleFile=true 
     - name: Pack CLI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
-      run: dotnet publish "Spriggit.CLI/Spriggit.CLI.csproj" --configuration Release -p:PublishSingleFile=true -p:EnableCompressionInSingleFile=true
+      run: dotnet publish "Spriggit.CLI/Spriggit.CLI.csproj" --configuration Release
     - name: Archive GUI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: |
         powershell Compress-Archive Spriggit.UI/bin/Release/net7.0-windows/win-x64/publish/* Spriggit.zip
-    - name: Archive GUI
+    - name: Archive CLI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: |
-        powershell Compress-Archive Spriggit.CLI/bin/Release/net7.0-windows/win-x64/publish/* Spriggit.CLI.zip
+        powershell Compress-Archive Spriggit.CLI/bin/Release/net7.0/publish/* Spriggit.CLI.zip
     - name: Publish GUI to Github
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       uses: svenstaro/upload-release-action@v2
