--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,37 +11,37 @@
     </PackageVersion>
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageVersion Include="Mutagen.Bethesda">
-      <Version>[0.42]</Version>
+      <Version>[0.42.0.1-nightly-20230818-103399]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Core">
-      <Version>[0.42]</Version>
+      <Version>[0.42.0.1-nightly-20230818-103399]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Kernel">
-      <Version>[0.42]</Version>
+      <Version>[0.42.0.1-nightly-20230818-103399]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization" >
-      <Version>[1.0.0]</Version>
+      <Version>[1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft" >
-      <Version>[1.0.0]</Version>
+      <Version>[1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator" >
-      <Version>[1.0.0]</Version>
+      <Version>[1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml" >
-      <Version>[1.0.0]</Version>
+      <Version>[1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Skyrim">
-      <Version>[0.42]</Version>
+      <Version>[0.42.0.1-nightly-20230818-103399]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Oblivion">
-      <Version>[0.42]</Version>
+      <Version>[0.42.0.1-nightly-20230818-103399]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Fallout4">
-      <Version>[0.42]</Version>
+      <Version>[0.42.0.1-nightly-20230818-103399]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Testing">
-      <Version>[0.42]</Version>
+      <Version>[0.42.0.1-nightly-20230818-103399]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Autofac">
       <Version>[2.60]</Version>
