--- a/Spriggit.UI/Spriggit.UI.csproj
+++ b/Spriggit.UI/Spriggit.UI.csproj
@@ -141,7 +141,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Spriggit.CLI\Spriggit.CLI.csproj" />
+      <ProjectReference Include="..\Spriggit.CLI.Lib\Spriggit.CLI.Lib.csproj" />
       <ProjectReference Include="..\Spriggit.Engine\Spriggit.Engine.csproj" />
     </ItemGroup>
 
