--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -112,7 +112,7 @@ jobs:
     - name: Archive CLI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: |
-        powershell Compress-Archive Spriggit.CLI/bin/Release/net7.0/publish/* "Spriggit Linux CLI.zip"
+        powershell Compress-Archive Spriggit.CLI/bin/Release/net7.0/publish/* SpriggitLinuxCLI.zip"
     - name: Publish GUI to Github
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       uses: svenstaro/upload-release-action@v2
@@ -124,7 +124,7 @@ jobs:
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       uses: svenstaro/upload-release-action@v2
       with:
-        file: Spriggit Linux CLI.zip
+        file: SpriggitLinuxCLI.zip
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.event.release.tag_name }}
     - name: Publish to Nuget.org
