Test to confirm strings file export on newer modkeys

--- a/Spriggit.Tests/Spriggit.Tests.csproj
+++ b/Spriggit.Tests/Spriggit.Tests.csproj
@@ -2,6 +2,7 @@
     
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="Mutagen.Bethesda.Starfield" />
         <PackageReference Include="Mutagen.Bethesda.Testing" />
         <PackageReference Include="Noggog.Testing" />
         <PackageReference Include="xunit" />
@@ -11,6 +12,7 @@
     
     <ItemGroup>
       <ProjectReference Include="..\Spriggit.Engine\Spriggit.Engine.csproj" />
+      <ProjectReference Include="..\Translation Packages\Spriggit.Yaml.Starfield\Spriggit.Yaml.Starfield.csproj" />
     </ItemGroup>
     
 </Project>
